<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="false"
    android:background="@android:color/white"
    android:descendantFocusability="blocksDescendants">




    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
<FrameLayout
    android:layout_height="wrap_content"
    android:layout_width="wrap_content">
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="fill_parent"
            android:layout_height="250dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:scaleType="fitXY"
            android:background="@android:color/background_dark"
            app:srcCompat="@android:drawable/ic_dialog_info"
            android:visibility="visible"
            android:focusable="false" />
        <View
            android:layout_height="match_parent"
            android:layout_width="match_parent"
        android:background="@android:color/white"/>

</FrameLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="5dp"
            android:textSize="24sp"
            android:text="@string/vertical_ellipsis"
            android:background="@android:color/transparent"
            android:id="@+id/options_button_on_image"
            android:clickable="true"/>


        <TextView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="160dp"
            android:focusable="false"
            android:maxLines="2"
            android:text="@string/header"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="22sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/sub_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/header"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:focusable="false"
            android:maxLines="1"
            android:maxLength="40"
            android:text="@string/sub_header"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/time_posted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:text="@string/three_h"
            android:textSize="12sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:text="@string/desc"
            android:textSize="15sp" />


    </RelativeLayout>


</LinearLayout>