<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginBottom="10dp"
    android:layout_marginTop="10dp"
    android:background="@android:color/background_light"
    android:focusable="false"
    android:descendantFocusability="blocksDescendants">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:focusable="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false">

            <ImageView
                android:id="@+id/small_icon_left_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="up_arrow_icon"
                android:padding="10dp"
                app:srcCompat="@android:drawable/ic_menu_rotate"
                android:focusable="false"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp"
                android:focusable="false">

                <TextView
                    android:id="@+id/header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/header"
                    android:focusable="false"/>

                <TextView
                    android:id="@+id/sub_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sub_header"
                    android:focusable="false"/>
            </LinearLayout>

            <TextView
                android:id="@+id/ellipse_end_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="250dp"
                android:layout_weight="1"
                android:text="@string/vertical_ellipsis"
                android:focusable="false"/>
        </LinearLayout>

        <TextView
            android:id="@+id/main_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="Sample Description"
            android:focusable="false"/>

        <ImageView
            android:id="@+id/main_image"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginBottom="15dp"
            android:focusable="false"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:focusable="false">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="5dp"
                android:orientation="horizontal"
                android:focusable="false">

                <ImageView
                    android:id="@+id/up_arrow"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="5dp"
                    app:srcCompat="@drawable/ic_arrow_upward_black_24dp"
                    android:focusable="false"/>

                <TextView
                    android:id="@+id/num_of_likes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="10"
                    android:focusable="false"/>

                <ImageView
                    android:id="@+id/down_arrow"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center_vertical"
                    app:srcCompat="@drawable/ic_arrow_downward_black_24dp"
                    android:focusable="false"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="120dp"
                android:orientation="horizontal"
                android:focusable="false">

                <ImageView
                    android:id="@+id/comment_icon"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="5dp"
                    android:background="@android:color/background_light"
                    app:srcCompat="@drawable/ic_comment_black"
                    android:focusable="false"/>

                <TextView
                    android:id="@+id/comment_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="326"
                    android:focusable="false"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginLeft="100dp"
                android:orientation="horizontal"
                android:focusable="false">

                <ImageView
                    android:id="@+id/share_icon"
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="5dp"
                    android:background="@android:color/background_light"
                    app:srcCompat="@drawable/share_icon"
                    android:focusable="false"/>

                <TextView
                    android:id="@+id/share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/share"
                    android:focusable="false"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>